@@ -1,3 +1,7 @@
+2016-10-03  Marek Polacek  <polacek@redhat.com>
+
+	* g++.dg/cpp0x/nullptr37.C: New test.
+
 2016-10-03  Bernd Edlinger  <bernd.edlinger@hotmail.de>
 
 	* c-c++-common/Wint-in-bool-context.c: Update test.
